# pan-code

./: naive_baseline_kaggle.py
clef26/generated-plagiarism-detection/evaluation/: README.md  eval.py
clef26/generated-plagiarism-detection/nonseq-plagiarism-detection-dataset/: README.md
clef26/generated-plagiarism-detection/plagiarism-detection-dataset/: README.md
clef26/generative-authorship-verification/eloquent/: README.md
clef26/generative-authorship-verification/pan25-generative-ai-detection/: .gitignore  README.md
clef26/generative-authorship-verification/pan26-generative-ai-detection/: README.md
clef26/generative-authorship-verification/pan26_genai_baselines/: README.md
clef26/generative-authorship-verification/pan26_genai_evaluator/: Dockerfile  README.md  build-docker.sh  pyproject.toml
clef26/generative-authorship-verification/pan26_genai_evaluator/pan26_genai_evaluator/: evaluator.py
clef26/multi-author-analysis/evaluator/: Dockerfile  evaluator.py
clef26/text-watermarking/evaluator/: Dockerfile  evaluator.py  requirements.txt
clef26/text-watermarking/obfuscation-baseline/: Dockerfile
clef26/text-watermarking/spot-check-dataset/: README.md
clef26/text-watermarking/watermarking-baseline/: Dockerfile  README.md  requirements.txt
clef26/text-watermarking/watermarking-baseline-naive/: README.md
output/: task1_naive_submission.csv  task2_naive_submission.csv
semeval23/baselines/: naive_baseline_kaggle.py
semeval23/baselines/data/: test.jsonl  val.jsonl
