[build-system]
requires = ["setuptools>=78.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pan26-genai-evaluator"
version = "1.0.0"
description = "Evaluator for the PAN'26 Generative AI Authorship verification shared task."
authors = [
  { name = "Janek Bevendorff" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "tira>=0.0.160",
]

[project.urls]
repository = "https://github.com/pan-webis-de/pan-code/tree/master/clef26/generative-authorship-verification"
homepage = "https://pan.webis.de/clef26/pan26-web/generated-content-analysis.html"

[project.scripts]
pan26-evaluator = "pan26_genai_evaluator.evaluator:main"
